# diy-page-cache-Oleg-cmd

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile.cpp-dev-env  devcontainer.json
include/benchmarks/: linreg_benchmark.h  search_benchmark.h
include/diy_cache/: cache.h  config.h  lab2_api.h  page.h  storage.h
src/app/: app.cpp  optimal.cpp  optimize.cpp
src/benchmarks/: linreg_benchmark.cpp  linreg_ex.cpp  pure_linreg_benchmark.cpp  pure_search_benchmark.cpp  search_benchmark.cpp  search_ex.cpp
src/diy_cache/: cache.cpp  lab2_api.cpp  page.cpp  storage.cpp
test/: test_storage.cpp
